--- a/app/package.json
+++ b/app/package.json
@@ -23,12 +23,13 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.3",
-    "nodemon": "^2.0.15"
+    "moment": "^2.29.1",
+    "mongoose": "^6.1.3"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "nodemon": "^2.0.15"
   }
 }
