--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -2,12 +2,12 @@ FROM node:17-alpine
 
 WORKDIR /usr/src/app
 
-COPY ./app/package*.json ./
+COPY ./app/package*.json .
 
 RUN apk add --update nodejs npm
 RUN npm install
 
-COPY ./app /usr/src/app
+COPY ./app .
 
 EXPOSE 3000
 
